# testhide-pytest-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/testhide_plugin/: hookspecs.py  plugin.py
